# fastcopilot

./: README.md  pyproject.toml
src/fastcopilot/: __init__.py  copilot.py  exceptions.py  schemas.py
tests/: test_copilot.py
