[tool.poetry]
name = "fastcopilot"
version = "0.5.3"
description = "Fast Copilot framework, easy to learn, fast to code, fast to build a copilot for your applications."
authors = ["Jackson <jackson.zhang0429@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.8"
pydantic = "^2.0"
loguru = "^0.7.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
